--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <druid.version>1.1.10</druid.version>
         <mybatis.generator.version>1.3.7</mybatis.generator.version>
         <mybatis.generator.plugin.version>1.3.7</mybatis.generator.plugin.version>
+        <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <dependencies>
@@ -108,6 +109,18 @@
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-maven-plugin</artifactId>
             <version>${mybatis.generator.plugin.version}</version>
+        </dependency>
+        <!--swagger-->
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
     </dependencies>
 
