--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <mybatis.generator.version>1.3.7</mybatis.generator.version>
         <mybatis.generator.plugin.version>1.3.7</mybatis.generator.plugin.version>
         <swagger.version>2.9.2</swagger.version>
+        <aliyun.version>4.1.1</aliyun.version>
     </properties>
 
     <dependencies>
@@ -110,8 +111,13 @@
             <artifactId>mybatis-generator-maven-plugin</artifactId>
             <version>${mybatis.generator.plugin.version}</version>
         </dependency>
+        <!--阿里云发短信-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>${aliyun.version}</version>
+        </dependency>
         <!--swagger-->
-
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
